app/assets/stylesheets/refinery-glass.scss
/* ... */
.circle-icon.fluid-width{
  padding: 0 10px 0 10px;
  min-width: 30px;
  width: auto;
  span{
    padding-top: 2px;
  }
}



/* -------------------- UI -------------------- */

#site-bar{
  min-height: 34px;
  height: 34px;
  background: $grey-9;
  border: none;
  a{
    letter-spacing: 1px;
    padding: 4px 0;
    display: block;
    font-size: 14px;
    color: $off-white;
    &:hover{
      color: $primary-hover;
    }
  }
  .site-link a{
    font-size: 16px;
    padding: 6px 0;
    font-weight: 600;
  }
}

#flash_container{
  padding: 0;
  #flash{
    margin: 30px 0;
    padding: 10px 15px;
    background: $off-white;
    border: 1px solid $grey-2;
    margin: 45px 60px 0;
    #flash_close{
      float: right;
    }
  }
}

.menu-link{
  width: 45px;
  height: 45px;
  background: $primary-color;
  position: absolute;
  top: 10px;
  color: $white;
  z-index: 10;
  padding: 9px 10px;
  @include transition($transition);
  &:hover{
    .gcicon{
      color: $primary-fade;
    }
  }
  .gcicon{
    color: $white;
    font-size: 24px;
  }
}

.menu-link-left{
  left: 10px;
}

#wrapper{
  background: lighten($off-white, 2%) !important;
  padding: 34px 50px 0;
}

.contextual-menu{
  background: $white;
  padding: 15px;
  margin-bottom: 30px;
  display: flex;
  align-items: center;
  .search {
    flex: 1; /* take up the rest of the remaining space */
    order: -1;
    margin-right: 15px;
  }
  .search input {
    width: 100%;
  }
}


/* -------------------- PAGES -------------------- */

.login{
  background: $off-white;
  padding-top: 120px;
  @media (max-width: 767px) {
    padding-top: 45px;  
  }
  h2{
    margin-bottom: 30px;
  }
}

.admin-index{
  max-width: 1200px;
  ul{
    li{
      margin-bottom: 0;
      &:last-of-type{
        padding-bottom: 0;
      }
      .page-row{
        margin-bottom: 2px;
        background: $white;
        padding: 0 15px;
        &:hover{
          background: $primary-hover;
          .gcicon{
            color: $white;
          }
          .actions{
            opacity: 1;
          }
          .page-title{
            color: $white;
          }
        }
        .child-toggle{
          .gcicon-folder{
            display: none;
          }
          .gcicon-folder-open{
            display: inline-block;
          }
        }
        .child-toggle.collapsed{
          .gcicon-folder{
            display: inline-block;
          }
          .gcicon-folder-open{
            display: none;
          }
        }
        .page-title{
          font-size: 18px;
          letter-spacing: 1px;
          display: inline-block;
          width: calc(100% - 185px);
          padding: 10px 0;
          color: $grey-6;
          transition: 0;
          .label{
            background: $grey-2;
            text-transform: capitalize;
            padding: 2px 8px;
            font-weight: 600;
            margin-left: 5px;
            position: relative;
            top: -2px;
          }
        }
        .actions{
          float: right;
          opacity: 0;
          position: relative;
          top: 10px;
          .circle-icon{
            color: $white;
            border-color: $white;
            &:link, &:visited {
              color: $white;
            }
            &:hover, &:focus{
              color: $white;
              border-color: $primary-dark;
              background: $primary-dark;
            }
          }
          span{
            width: 30px;
            text-align: center;
            display: inline-block;
            margin-left: 5px;
          }
        }
      }
    }
    ul{
      list-style: outside none none;
      margin: 0 0 0 0;
      padding: 0;
      &:empty{
        margin: 0;
      }
      li{
        margin-bottom: 0;
        .page-row{
          background: lighten($off-white, 4%);
          padding-left: 30px;
        }
        ul{
          li .page-row{
            padding-left: 60px;
          }
          ul{
            li .page-row{
              padding-left: 90px;
            }
            ul{
              li .page-row {
                padding-left: 120px;
              }
              ul{
                li .page-row{
                  padding-left: 150px;
                }
                ul{
                  li .page-row{
                    padding-left: 180px;
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}



/* -------------------- SIDEBARS -------------------- */

#sidebar-left{
  background: $off-white;
  border-right: 1px solid $grey-2;
  padding: 45px 0;
  #sidebar-left-inner{
    height: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
    li{
      margin: 0 0 1px;
      .gcicon{
        margin-right: 4px;
        color: $grey-6;
      }
      a{
        padding: 10px 15px 6px;
        width: 100%;
        display: block;
        color: $grey-6;
        font-size: 16px;
        letter-spacing: 1px;
        text-decoration: none;
        @include transition(0.1s);
        font-weight: 400;
        text-transform: uppercase;
        &:hover{
          border-bottom: 0;
          background: $white-opaque;
          color: $primary-dark;
          .gcicon{
            color: $primary-dark;
          }
        }
      }
      .active{
        border-right: 2px solid $primary-color;
        background: $white-opaque;
      }
      ul{
        padding-top: 1px;
        margin-bottom: 10px;
        li{
          a{
            padding: 4px 15px 4px 30px;
            font-size: 13px;
            font-weight: 400;
            background: $white-opaque;
          }
        }
      }
    }
    .list-heading{
      padding: 10px 15px 6px 30px;
      font-weight: 600;
      font-size: 14px;
      letter-spacing: 1px;
      text-transform: uppercase;
      background: darken($white-opaque, 3%);
      .gcicon{
        margin-right: 8px;
      }
    }
  }
}
/* ... */

